--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,15 @@
+# config/routes.yaml
+
 controllers:
     resource:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+employee_home:
+    path: /employee
+    controller: App\Controller\EmployeeController::index
+
+admin_home:
+    path: /admin
+    controller: App\Controller\AdminController::index
