feat: Configuration de la base de données de test et ajout des fixtures
- Configuration de `zoo_arcadia_test` pour l'environnement de test
- Ajout de 20 entrées automatiques via les fixtures

--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,4 @@ PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 # .env.test
 
-DATABASE_URL="mysql://root:UvuZ5!hBFAgAgV@127.0.0.1:3306/zoo_arcadia?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:UvuZ5!hBFAgAgV@127.0.0.1:3306/zoo_arcadia_test?serverVersion=8.0.32&charset=utf8mb4"
