Fix database relationship in .platform.app.yaml

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -23,7 +23,7 @@ mounts:
     "/var": { source: local, source_path: var }
 
 relationships:
-    database: "mysql:database"
+    database: "mysql:mysql"
 
 variables:
     env:
