--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,9 +32,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # Zones pour Administrateur, Employé, et Vétérinaire
-        - { path: ^/api/admin, roles: ROLE_ADMIN }
-        - { path: ^/api/employee, roles: ROLE_EMPLOYE }
-        - { path: ^/api/veterinaire, roles: ROLE_VETERINAIRE }
+        - { path: ^/manage-users, roles: ROLE_ADMIN }
+        - { path: ^/manage-services, roles: ROLE_EMPLOYE }
+        - { path: ^/manage-habitats, roles: ROLE_VETERINAIRE }
 
         # Registration et Login accessibles au public
         - { path: ^/api/registration, roles: PUBLIC_ACCESS }
