feat: Synchronisation réussie entre MySQL et MongoDB pour le suivi des vues des animaux
- Intégration de MongoDB pour suivre le nombre de vues de chaque animal dans la collection 'animal_stats'.
- Ajout du service `MongoDBService` avec les méthodes suivantes :
  - `getViewCount()`: Récupère le nombre de vues pour un animal spécifique.
  - `incrementViewCount()`: Incrémente le compteur de vues à chaque consultation d'un animal.
  - `deleteAnimalViewCount()`: Supprime les anciens enregistrements lorsque le nom d'un animal est modifié.
- Mise à jour de `AnimalController` pour assurer une synchronisation fluide :
  - La méthode `new()` enregistre désormais les nouveaux animaux à la fois dans MySQL et MongoDB.
  - La méthode `edit()` garantit que si le nom d'un animal est modifié, l'ancien enregistrement dans MongoDB est supprimé et un nouveau est créé.
  - La méthode `show()` récupère le nombre de vues depuis MongoDB et l'incrémente à chaque accès.
- Ajout de la route `/api/animal/sync-all` pour synchroniser les enregistrements des animaux existants dans MySQL avec MongoDB.
- Garantie de l'intégrité des données entre MySQL et MongoDB grâce à une gestion complète des erreurs pour les enregistrements manquants ou incompatibles.
- Tests approfondis réalisés :
  - Vérification de la création de nouveaux animaux dans MySQL et MongoDB avec une initialisation correcte du `view_count`.
  - Test de l'incrémentation du compteur de vues à travers plusieurs requêtes GET via Postman.
  - Validation des mises à jour des enregistrements d'animaux et de la synchronisation des modifications entre MySQL et MongoDB.
  - Vérification de la cohérence des données lors de divers cas de figure comme le renommage des animaux et la suppression des enregistrements.
- Tous les tests et cas d'utilisation ont été réussis avec succès, et la synchronisation est pleinement fonctionnelle.
- La mise en œuvre est désormais stable et prête pour un déploiement en production.

Ce commit finalise l'intégratio

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,18 +1,27 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
+# Ce fichier est le point d'entrée pour configurer vos propres services.
+# Les fichiers dans le sous-répertoire packages/ configurent vos dépendances.
 
-# Put parameters here that don't need to change on each machine where the app is deployed
+# Mettez ici les paramètres qui ne nécessitent pas de changement sur chaque machine où l'application est déployée
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    mongodb_uri: 'mongodb://localhost:27017'
+    mongodb_database_name: 'zooarcadia'
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    App\Service\MongoDBService:
+        autowire: false
+        arguments:
+            $mongoUri: '%env(MONGODB_URI)%'
+            $databaseName: 'zooarcadia'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+
+    # Configuration par défaut pour les services dans *ce* fichier
+    _defaults:
+        autowire: true      # Injecte automatiquement les dépendances dans vos services.
+        autoconfigure: true # Enregistre automatiquement vos services en tant que commandes, abonnés aux événements, etc.
+
+    # Rendre les classes dans src/ disponibles pour être utilisées en tant que services
+    # Cela crée un service par classe dont l'identifiant est le nom complet de la classe
     App\:
         resource: '../src/'
         exclude:
@@ -20,5 +29,5 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Ajoutez plus de définitions de service lorsque la configuration explicite est nécessaire
+    # Veuillez noter que les dernières définitions remplacent toujours les précédentes
