--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,18 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "alcaeus/mongo-php-adapter": "^1.2",
+        "doctrine/annotations": "^2.0",
+        "doctrine/cache": "^2.2",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/migrations": "^3.8",
-        "doctrine/orm": "^3.3",
+        "doctrine/mongodb-odm-bundle": "*",
+        "doctrine/orm": "*",
+        "doctrine/persistence": "^3.3",
         "fakerphp/faker": "^1.23",
+        "mongodb/mongodb": "^1.20",
         "nelmio/api-doc-bundle": "^4.32",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
