--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,11 +1,10 @@
 nelmio_cors:
     defaults:
-        origin_regex: false
-        allow_origin: ['*']
+        origin_regex: true
+        allow_origin: ['http://localhost:3000', 'https://localhost:3000', 'https://127.0.0.1:8000']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
+        allow_headers: ['Content-Type', 'Authorization', 'X-AUTH-TOKEN']
         expose_headers: ['Link']
         max_age: 3600
     paths:
         '^/': null
-
