--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "fakerphp/faker": "^1.23",
         "mongodb/mongodb": "^1.20",
         "nelmio/api-doc-bundle": "^4.32",
-        "nelmio/cors-bundle": "^2.5",
+        "nelmio/cors-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.33",
         "symfony/asset": "6.4.*",
