--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -4,7 +4,8 @@ nelmio_cors:
         allow_origin: ['http://localhost:3000', 'https://127.0.0.1:8000']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
         allow_headers: ['Content-Type', 'Authorization', 'X-AUTH-TOKEN']
-        expose_headers: ['Link']
+        expose_headers: ['Link', 'X-Total-Count']
         max_age: 3600
+        allow_credentials: true
     paths:
-        '^/': null
+        '^/api/': ~
