Optimisation des appels API pour la récupération des informations des animaux
- Implémentation d’une logique de récupération d'informations depuis l’API pour chaque modal, en utilisant des tokens d'accès sécurisés.
- Ajout d'une logique d'incrémentation de vues pour chaque animal avec l'API lors de l'affichage des modales.
- Gestion des messages d'erreur et amélioration de la sécurité avec des réponses adaptées en cas d'authentification échouée.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/migrations": "^3.8",
         "doctrine/mongodb-odm-bundle": "*",
-        "doctrine/orm": "*",
+        "doctrine/orm": "^3.3",
         "doctrine/persistence": "^3.3",
         "fakerphp/faker": "^1.23",
         "mongodb/mongodb": "^1.20",
