--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -15,4 +15,4 @@ nelmio_api_doc:
 
     areas: # to filter documented areas
         path_patterns:
-            - ^/api
+            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
