--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -18,3 +18,8 @@ api_users:
     path: /api/users
     controller: App\Controller\UserController::getUsers
     methods: GET
+
+app.swagger_ui:
+    path: /api/doc
+    controller: nelmio_api_doc.controller.swagger_ui
+    methods: GET
