--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -18,3 +18,7 @@ api_users:
     path: /api/users
     controller: App\Controller\UserController::getUsers
     methods: GET
+
+api_doc:
+    path: /api/doc
+    controller: App\Controller\ApiDocController::index
