--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,7 +1,7 @@
 nelmio_cors:
     defaults:
         origin_regex: true
-        allow_origin: ['http://localhost:3000', 'https://127.0.0.1:8000', 'https://rzgar.alwaysdata.net', 'https://master-7rqtwti-unhphrs4kyslw.fr-3.platformsh.site']
+        allow_origin: ['https://rzgar.alwaysdata.net', 'https://master-7rqtwti-unhphrs4kyslw.fr-3.platformsh.site', 'http://localhost:3000', 'https://127.0.0.1:8000']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
         allow_headers: ['Content-Type', 'Authorization', 'X-AUTH-TOKEN']
         expose_headers: ['Link', 'X-Total-Count']
